src/objects/ffr__ReportingPageTableColumn__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingpagetablecolumn</customHelpPage>
    <fields>
        <fullName>ffr__ColumnKey__c</fullName>
        <label>Column Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CALC</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ColumnTitle__c</fullName>
        <label>Column Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingPageTable__c</fullName>
        <label>Reporting Page Table</label>
        <referenceTo>ffr__ReportingPageTable__c</referenceTo>
        <relationshipLabel>Reporting Page Table Columns</relationshipLabel>
        <relationshipName>ReportingPageTableColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Page Table Column</label>
    <nameField>
        <label>Reporting Page Table Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Page Table Columns</pluralLabel>
    <recordTypes>
        <fullName>ffr__ColumnCalculation</fullName>
        <active>true</active>
        <description>Use this record type to add a column calculation to your reporting table.</description>
        <label>Column Calculation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__Group</fullName>
        <active>true</active>
        <description>Use this record type to add a group column to your reporting table.</description>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__Value</fullName>
        <active>true</active>
        <description>Use this record type to add a value column to your reporting table.</description>
        <label>Value</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>